projects: ad9084_ebz: versal: Update to the new Transceiver Subsystem
Signed-off-by: Bogdan Luncan <bogdan.luncan@analog.com>

--- a/projects/ad9084_ebz/vck190/Makefile
+++ b/projects/ad9084_ebz/vck190/Makefile
@@ -6,7 +6,6 @@
 
 PROJECT_NAME := ad9084_ebz_vck190
 
-M_DEPS += ../common/versal_transceiver.tcl
 M_DEPS += ../common/versal_hsci_phy.tcl
 M_DEPS += ../common/ad9084_ebz_spi.v
 M_DEPS += ../../scripts/adi_pd.tcl
@@ -16,6 +15,7 @@ M_DEPS += ../../common/vmk180/vmk180_system_bd.tcl
 M_DEPS += ../../common/vck190/vck190_system_constr.xdc
 M_DEPS += ../../common/vck190/vck190_system_bd.tcl
 M_DEPS += ../../ad9084_ebz/common/ad9084_ebz_bd.tcl
+M_DEPS += ../../../library/xilinx/scripts/versal_xcvr_subsystem.tcl
 M_DEPS += ../../../library/util_hbm/scripts/adi_util_hbm.tcl
 M_DEPS += ../../../library/util_cdc/sync_bits.v
 M_DEPS += ../../../library/common/ad_iobuf.v
