--- a/.github/workflows/check_for_guideline_rules.yml
+++ b/.github/workflows/check_for_guideline_rules.yml
@@ -25,7 +25,7 @@ jobs:
           # version range
           python-version: '3.10'
       - name: Checkout repository code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6.0.0
         # repository that retrieves all the changed files
       - name: Load get-changed-files repo
         uses: Ana06/get-changed-files@v2.3.0
@@ -35,11 +35,11 @@ jobs:
       - name: Print changed files
         run: |
           echo "::group::Click here to see the Changed files"
-          echo "${{ steps.changed_files.outputs.all }}"
+          echo "${{ steps.changed_files.outputs.added_modified_renamed }}"
           echo "::endgroup::"
       - name: Executing Py script for guideline check
         id: execution
         # -p flag means that files will be specified with their relative path
         run: |
-          python ./.github/scripts/check_guideline.py -p ${{ steps.changed_files.outputs.all }}
+          python ./.github/scripts/check_guideline.py -p ${{ steps.changed_files.outputs.added_modified_renamed }}
         shell: sh
