projects: ad9084_ebz: Change spi to 3 wire
Signed-off-by: Bogdan Luncan <bogdan.luncan@analog.com>

--- a/projects/ad9084_ebz/vpk180/Makefile
+++ b/projects/ad9084_ebz/vpk180/Makefile
@@ -8,7 +8,6 @@ PROJECT_NAME := ad9084_ebz_vpk180
 
 M_DEPS += ../common/versal_transceiver.tcl
 M_DEPS += ../common/versal_hsci_phy.tcl
-M_DEPS += ../common/ad9084_ebz_spi.v
 M_DEPS += ../../scripts/adi_pd.tcl
 M_DEPS += ../../common/xilinx/dacfifo_bd.tcl
 M_DEPS += ../../common/xilinx/adcfifo_bd.tcl
@@ -18,6 +17,7 @@ M_DEPS += ../../ad9084_ebz/common/ad9084_ebz_bd.tcl
 M_DEPS += ../../../library/util_hbm/scripts/adi_util_hbm.tcl
 M_DEPS += ../../../library/util_cdc/sync_bits.v
 M_DEPS += ../../../library/common/ad_iobuf.v
+M_DEPS += ../../../library/common/ad_3w_spi.v
 M_DEPS += ../../../projects/common/xilinx/data_offload_bd.tcl
 M_DEPS += ../../../library/jesd204/scripts/jesd204.tcl
 
