codeowners: Add ltc2378_fmc codeowners
Signed-off-by: sarpadi <sergiu.arpadi@analog.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -257,6 +257,9 @@
 # Code owners for pulsar_adc_pmdz folder
 /projects/pulsar_adc_pmdz/  sergiu.arpadi@analog.com  pop.ioan-daniel@analog.com
 
+# Code owners for ltc2378_fmc folder
+/projects/ltc2378_fmc/      pop.ioan-daniel@analog.com sergiu.arpadi@analog.com
+
 ##### Code owners for IPs (if no one specified, global owners applies) #####
 
 # Code owner for ad463x_data_capture IP
