--- a/projects/ada4355_fmc/zed/Makefile
+++ b/projects/ada4355_fmc/zed/Makefile
@@ -11,8 +11,10 @@ M_DEPS += ../../scripts/adi_pd.tcl
 M_DEPS += ../../common/zed/zed_system_constr.xdc
 M_DEPS += ../../common/zed/zed_system_bd.tcl
 M_DEPS += ../../../library/common/ad_iobuf.v
+M_DEPS += ../../../library/axi_tdd/scripts/axi_tdd.tcl
 
 LIB_DEPS += axi_ada4355
+LIB_DEPS += axi_tdd
 LIB_DEPS += axi_clkgen
 LIB_DEPS += axi_dmac
 LIB_DEPS += axi_hdmi_tx
