projects/common/lfcpnx: Updating base design.
Adding sysid support.
Adding external UART for interrupt compatibility.
Updating IP versions.

Signed-off-by: Villyam <Vilmoscsaba.Jozsa@analog.com>

--- a/projects/common/lfcpnx/Makefile
+++ b/projects/common/lfcpnx/Makefile
@@ -1,5 +1,5 @@
 ####################################################################################
-## Copyright (c) 2023 - 2024 Analog Devices, Inc.
+## Copyright (c) 2023 - 2025 Analog Devices, Inc.
 ### SPDX short identifier: BSD-1-Clause
 ## Auto-generated, do not modify!
 ####################################################################################
@@ -9,5 +9,8 @@ PROJECT_NAME := template_lfcpnx
 M_DEPS += lfcpnx_system_constr.pdc
 M_DEPS += ../../../projects/scripts/adi_pd.tcl
 M_DEPS += ../../../projects/common/lfcpnx/lfcpnx_system_pb.tcl
+
+LIB_DEPS += axi_sysid
+LIB_DEPS += sysid_rom
 
 include ../../scripts/project-lattice.mk
