--- a/projects/ad353xr/coraz7s/Makefile
+++ b/projects/ad353xr/coraz7s/Makefile
@@ -6,13 +6,23 @@
 
 PROJECT_NAME := ad353xr_coraz7s
 
+M_DEPS += ../common/ad353xr_bd.tcl
 M_DEPS += ../../scripts/adi_pd.tcl
 M_DEPS += ../../common/coraz7s/coraz7s_system_ps7.tcl
 M_DEPS += ../../common/coraz7s/coraz7s_system_constr.xdc
 M_DEPS += ../../common/coraz7s/coraz7s_system_bd.tcl
 M_DEPS += ../../../library/common/ad_iobuf.v
+M_DEPS += ../../../library/spi_engine/scripts/spi_engine.tcl
 
+LIB_DEPS += axi_clkgen
+LIB_DEPS += axi_dmac
 LIB_DEPS += axi_sysid
+LIB_DEPS += axi_pwm_gen
+LIB_DEPS += spi_engine/axi_spi_engine
+LIB_DEPS += spi_engine/spi_axis_reorder
+LIB_DEPS += spi_engine/spi_engine_execution
+LIB_DEPS += spi_engine/spi_engine_interconnect
+LIB_DEPS += spi_engine/spi_engine_offload
 LIB_DEPS += sysid_rom
 
 include ../../scripts/project-xilinx.mk
