.gitattributes: Update to include jpg, jpeg and png in git LFS
Signed-off-by: BCapota <Bianca-ramona.Capota@analog.com>

--- a/.gitattributes
+++ b/.gitattributes
@@ -13,3 +13,6 @@
 *.qsys text
 *.xise text
 Makefile text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.jpeg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
