adsy2301_2: Add TDD engine
Signed-off-by: Bogdan Luncan <bogdan.luncan@analog.com>

--- a/projects/adsy2301_2/zcu102/Makefile
+++ b/projects/adsy2301_2/zcu102/Makefile
@@ -12,8 +12,10 @@ M_DEPS += ../common/adsy2301_2_bd.tcl
 M_DEPS += ../../scripts/adi_pd.tcl
 M_DEPS += ../../common/zcu102/zcu102_system_bd.tcl
 M_DEPS += ../../common/zcu102/zcu102_system_constr.xdc
+M_DEPS += ../../../library/axi_tdd/scripts/axi_tdd.tcl
 
 LIB_DEPS += axi_sysid
 LIB_DEPS += sysid_rom
+LIB_DEPS += axi_tdd
 
 include ../../scripts/project-xilinx.mk
