projects:ad_gmsl2eth_sl: Renamed project's components to current board name: ADRD8012-01Z
Signed-off-by: alin724 <alin-tudor.sferle@analog.com>

--- a/projects/adrd8012_01z/k26/Makefile
+++ b/projects/adrd8012_01z/k26/Makefile
@@ -1,15 +1,13 @@
 ####################################################################################
-## Copyright (c) 2024-2025 Analog Devices, Inc.
+## Copyright (c) 2024-2026 Analog Devices, Inc.
 ### SPDX short identifier: BSD-1-Clause
 ## Auto-generated, do not modify!
 ####################################################################################
 
-PROJECT_NAME := ad_gmsl2eth_sl_k26
+PROJECT_NAME := adrd8012_01z_k26
 
-M_DEPS += ../common/ad_gmsl2eth_sl_bd.tcl
+M_DEPS += ../common/adrd8012_01z_bd.tcl
 M_DEPS += ../../scripts/adi_pd.tcl
-M_DEPS += ../../common/zcu102/zcu102_system_constr.xdc
-M_DEPS += ../../common/zcu102/zcu102_system_bd.tcl
 M_DEPS += ../../../library/common/ad_iobuf.v
 
 M_DEPS += ../../../library/corundum/scripts/corundum_k26_cfg.tcl
