projects/ad4880_fmc_evb : Add AD4880 functionality for make with ADC_N_BITS option
 - Modified zed/system_project.tcl to insert ADC_N_BITS parameter into project parameter list.
 - Modified common/ad4880_fmc_evb_bd.tcl so that DMA_DATA_WIDTH_SRC and SAMPLE_DATA_WIDTH are set
   based on the value of ADC_N_BITS. Also added ADC_N_BITS parameter to the axi_ad408x instances.
 - Renamed project folder from ad488x_fmc_evb to ad4880_fmc_evb and subsequently changed any instance
   of ad488x to ad4880 both in project file names and in project file contents.

Signed-off-by: Serban Tiution <Serban.Tiution@analog.com>

--- a/projects/ad4880_fmc_evb/zed/Makefile
+++ b/projects/ad4880_fmc_evb/zed/Makefile
@@ -4,9 +4,9 @@
 ## Auto-generated, do not modify!
 ####################################################################################
 
-PROJECT_NAME := ad488x_fmc_evb_zed
+PROJECT_NAME := ad4880_fmc_evb_zed
 
-M_DEPS += ../common/ad488x_fmc_evb_bd.tcl
+M_DEPS += ../common/ad4880_fmc_evb_bd.tcl
 M_DEPS += ../../scripts/adi_pd.tcl
 M_DEPS += ../../common/zed/zed_system_constr.xdc
 M_DEPS += ../../common/zed/zed_system_bd.tcl
