Made an IP and added it in BD. Signed-off-by: Seres Ella <Ella-timea.Seres@analog.com>

--- a/projects/pynq_subsystem/zed/Makefile
+++ b/projects/pynq_subsystem/zed/Makefile
@@ -21,5 +21,6 @@ LIB_DEPS += axi_spdif_tx
 LIB_DEPS += axi_sysid
 LIB_DEPS += sysid_rom
 LIB_DEPS += util_i2c_mixer
+LIB_DEPS += util_reg
 
 include ../../scripts/project-xilinx.mk
