projects/ad738x_fmc/lfcpnx: Updating sim.tcl + Makefile.
Signed-off-by: Villyam <Vilmoscsaba.Jozsa@analog.com>

--- a/projects/ad738x_fmc/lfcpnx/Makefile
+++ b/projects/ad738x_fmc/lfcpnx/Makefile
@@ -1,5 +1,5 @@
 ####################################################################################
-## Copyright (c) 2024 - 2025 Analog Devices, Inc.
+## Copyright (c) 2024 - 2026 Analog Devices, Inc.
 ### SPDX short identifier: BSD-1-Clause
 ## Auto-generated, do not modify!
 ####################################################################################
@@ -18,6 +18,7 @@ LIB_DEPS += spi_engine/axi_spi_engine
 LIB_DEPS += spi_engine/spi_engine_execution
 LIB_DEPS += spi_engine/spi_engine_interconnect
 LIB_DEPS += spi_engine/spi_engine_offload
+LIB_DEPS += spi_engine/sim/spi_sdo_sin_tb
 LIB_DEPS += sysid_rom
 LIB_DEPS += axi_sysid
 
